<resources>
    <string name="app_name">Go Online</string>
    <string name="action_settings">Settings</string>
    <string name="google">Google</string>
    <string name="login_user_name"></string>
    <string name="login_user_name_hint"></string>
    <string name="show_msg_name"></string>
    <string name="url">url</string>
    <string name="search_base_url">www.google.com/#q=</string>
    <string name="news_base_url">news.google.com</string>
    <string name="video_base_url">www.youtube.com</string>
    <string name="url_base_url">http://www.aqovd.com/rss/rssnews_en.json?t=</string>
    <string name="image_base_url">images.google.com</string>
    <string name="hold_on">please wait a moment</string>
    <string name="ajax_post_url">http://www.aqovd.com</string>
    <string name="uniqueID_file_name">uniqueID</string>
    <string name="re_url">http://service.appmac.xyz/api/report.php</string>
    <string name="hot_url_1">facebook.com</string>
<string name="hot_url_2">youtube.com</string>
<string name="hot_url_3">yahoo.com</string>
<string name="hot_url_4">wikipedia.org</string>
<string name="hot_url_5">live.com</string>
<string name="hot_url_6">twitter.com</string>
<string name="hot_url_7">amazon.com</string>
<string name="hot_url_8">instagram.com</string>
<string name="hot_url_9">netflix.com</string>
<string name="hot_url_10">msn.com</string>
<string name="hot_url_11">reddit.com</string>
<string name="hot_url_12">bing.com</string>
<string name="hot_url_13">linkedin.com</string>
<string name="hot_url_14">tumblr.com</string>
<string name="hot_url_15">whatsapp.com</string>
<string name="hot_url_16">ebay.com</string>
<string name="hot_url_17">pinterest.com</string>
<string name="hot_url_18">imgur.com</string>
<string name="hot_url_19">imdb.com</string>
<string name="hot_url_20">twitch.tv</string>
<string name="hot_name_1">facebook</string>
<string name="hot_name_2">youtube</string>
<string name="hot_name_3">yahoo</string>
<string name="hot_name_4">wikipedia</string>
<string name="hot_name_5">live</string>
<string name="hot_name_6">twitter</string>
<string name="hot_name_7">amazon</string>
<string name="hot_name_8">instagram</string>
<string name="hot_name_9">netflix</string>
<string name="hot_name_10">msn</string>
<string name="hot_name_11">reddit</string>
<string name="hot_name_12">bing</string>
<string name="hot_name_13">linkedin</string>
<string name="hot_name_14">tumblr</string>
<string name="hot_name_15">whatsapp</string>
<string name="hot_name_16">ebay</string>
<string name="hot_name_17">pinterest</string>
<string name="hot_name_18">imgur</string>
<string name="hot_name_19">imdb</string>
<string name="hot_name_20">twitch</string>
<string name="f_u_01">Entertainment</string>
<string name="f_u_01_01">tmz.com</string>
<string name="f_u_01_02">super.cz</string>
<string name="f_u_01_03">pudelek.pl</string>
<string name="f_u_01_04">ew.com</string>
<string name="f_u_01_05">jezebel.com</string>
<string name="f_u_01_06">topito.com</string>
<string name="f_u_01_07">hollywoodlife.com</string>
<string name="f_u_01_08">deadline.com</string>
<string name="f_u_01_09">zimbio.com</string>
<string name="f_u_01_10">radaronline.com</string>
<string name="f_u_02">Video</string>
<string name="f_u_02_01">youtube.com</string>
<string name="f_u_02_02">netflix.com</string>
<string name="f_u_02_03">nicovideo.jp</string>
<string name="f_u_02_04">dailymotion.com</string>
<string name="f_u_02_05">vimeo.com</string>
<string name="f_u_02_06">youku.com</string>
<string name="f_u_02_07">hulu.com</string>
<string name="f_u_02_08">vodlocker.com</string>
<string name="f_u_02_09">cda.pl</string>
<string name="f_u_02_10">sky.com</string>
<string name="f_u_03">Movie</string>
<string name="f_u_03_01">kat.cr</string>
<string name="f_u_03_02">imdb.com</string>
<string name="f_u_03_03">kinogo.co</string>
<string name="f_u_03_04">zone-telechargement.com</string>
<string name="f_u_03_05">kinopoisk.ru</string>
<string name="f_u_03_06">subscene.com</string>
<string name="f_u_03_07">my-hit.org</string>
<string name="f_u_03_08">movie.douban.com</string>
<string name="f_u_03_09">rottentomatoes.com</string>
<string name="f_u_03_10">filmweb.pl</string>
<string name="f_u_04">Music</string>
<string name="f_u_04_01">soundcloud.com</string>
<string name="f_u_04_02">thepiratebay.org</string>
<string name="f_u_04_03">youtube-mp3.org</string>
<string name="f_u_04_04">spotify.com</string>
<string name="f_u_04_05">pandora.com</string>
<string name="f_u_04_06">azlyrics.com</string>
<string name="f_u_04_07">mp3.zing.vn</string>
<string name="f_u_04_08">aclst.com</string>
<string name="f_u_04_09">ultimate-guitar.com</string>
<string name="f_u_04_10">music.yandex.ru</string>
<string name="f_u_05">Beauty</string>
<string name="f_u_05_01">bodybuilding.com</string>
<string name="f_u_05_02">livestrong.com</string>
<string name="f_u_05_03">myfitnesspal.com</string>
<string name="f_u_05_04">boredpanda.com</string>
<string name="f_u_05_05">sephora.com</string>
<string name="f_u_05_06">oriflame.com</string>
<string name="f_u_05_07">menshealth.com</string>
<string name="f_u_05_08">mensfitness.com</string>
<string name="f_u_05_09">ulta.com</string>
<string name="f_u_05_10">women.kapook.com</string>
<string name="f_u_06">Books</string>
<string name="f_u_06_01">scribd.com</string>
<string name="f_u_06_02">goodreads.com</string>
<string name="f_u_06_03">wattpad.com</string>
<string name="f_u_06_04">archiveofourown.org</string>
<string name="f_u_06_05">issuu.com</string>
<string name="f_u_06_06">tvtropes.org</string>
<string name="f_u_06_07">dummies.com</string>
<string name="f_u_06_08">audible.com</string>
<string name="f_u_06_09">wikibooks.org</string>
<string name="f_u_06_10">barnesandnoble.com</string>
<string name="f_u_07">Jobs</string>
<string name="f_u_07_01">indeed.com</string>
<string name="f_u_07_02">blackboard.com</string>
<string name="f_u_07_03">coursera.org</string>
<string name="f_u_07_04">mit.edu</string>
<string name="f_u_07_05">duolingo.com</string>
<string name="f_u_07_06">academia.edu</string>
<string name="f_u_07_07">instructure.com</string>
<string name="f_u_07_08">hh.ru</string>
<string name="f_u_07_09">glassdoor.com</string>
<string name="f_u_07_10">tutorialspoint.com</string>
<string name="f_u_08">Finance</string>
<string name="f_u_08_01">paypal.com</string>
<string name="f_u_08_02">finance.yahoo.com</string>
<string name="f_u_08_03">chase.com</string>
<string name="f_u_08_04">bankofamerica.com</string>
<string name="f_u_08_05">alipay.com</string>
<string name="f_u_08_06">wellsfargo.com</string>
<string name="f_u_08_07">sberbank.ru</string>
<string name="f_u_08_08">americanexpress.com</string>
<string name="f_u_08_09">capitalone.com</string>
<string name="f_u_08_10">onlinesbi.com</string>
<string name="f_u_09">Food</string>
<string name="f_u_09_01">nocookie.net</string>
<string name="f_u_09_02">allrecipes.com</string>
<string name="f_u_09_03">tabelog.com</string>
<string name="f_u_09_04">cookpad.com</string>
<string name="f_u_09_05">foodnetwork.com</string>
<string name="f_u_09_06">zomato.com</string>
<string name="f_u_09_07">tesco.com</string>
<string name="f_u_09_08">chefkoch.de</string>
<string name="f_u_09_09">dianping.com</string>
<string name="f_u_09_10">food.com</string>
<string name="f_u_10">Games</string>
<string name="f_u_10_01">twitch.tv</string>
<string name="f_u_10_02">steamcommunity.com</string>
<string name="f_u_10_03">steampowered.com</string>
<string name="f_u_10_04">friv.com</string>
<string name="f_u_10_05">ign.com</string>
<string name="f_u_10_06">battle.net</string>
<string name="f_u_10_07">gamefaqs.com</string>
<string name="f_u_10_08">roblox.com</string>
<string name="f_u_10_09">gamepedia.com</string>
<string name="f_u_10_10">leagueoflegends.com</string>
<string name="f_u_11">Health</string>
<string name="f_u_11_01">nih.gov</string>
<string name="f_u_11_02">webmd.com</string>
<string name="f_u_11_03">fitbit.com</string>
<string name="f_u_11_04">mayoclinic.org</string>
<string name="f_u_11_05">health.mail.ru</string>
<string name="f_u_11_06">drugs.com</string>
<string name="f_u_11_07">healthline.com</string>
<string name="f_u_11_08">doctissimo.fr</string>
<string name="f_u_11_09">walgreens.com</string>
<string name="f_u_11_10">medscape.com</string>
<string name="f_u_12">Email</string>
<string name="f_u_12_01">live.com</string>
<string name="f_u_12_02">mail.ru</string>
<string name="f_u_12_03">web.de</string>
<string name="f_u_12_04">gmx.net</string>
<string name="f_u_12_05">list-manage.com</string>
<string name="f_u_12_06">szn.cz</string>
<string name="f_u_12_07">mailchimp.com</string>
<string name="f_u_12_08">attachmail.ru</string>
<string name="f_u_12_09">mail.com</string>
<string name="f_u_12_10">gmail.com</string>
<string name="f_u_13">Socially</string>
<string name="f_u_13_01">facebook.com</string>
<string name="f_u_13_02">twitter.com</string>
<string name="f_u_13_03">vk.com</string>
<string name="f_u_13_04">ok.ru</string>
<string name="f_u_13_05">instagram.com</string>
<string name="f_u_13_06">reddit.com</string>
<string name="f_u_13_07">linkedin.com</string>
<string name="f_u_13_08">tumblr.com</string>
<string name="f_u_13_09">whatsapp.com</string>
<string name="f_u_13_10">pinterest.com</string>
<string name="f_u_14"> News</string>
<string name="f_u_14_01">yahoo.com</string>
<string name="f_u_14_02">msn.com</string>
<string name="f_u_14_03">yahoo.co.jp</string>
<string name="f_u_14_04">qq.com</string>
<string name="f_u_14_05">globo.com</string>
<string name="f_u_14_06">bbc.co.uk</string>
<string name="f_u_14_07">uol.com.br</string>
<string name="f_u_14_08">cnn.com</string>
<string name="f_u_14_09">news.yandex.ru</string>
<string name="f_u_14_10">bbc.com</string>
<string name="f_u_15">Shopping</string>
<string name="f_u_15_01">amazon.com</string>
<string name="f_u_15_02">ebay.com</string>
<string name="f_u_15_03">alibaba.com</string>
<string name="f_u_15_04">aliexpress.com</string>
<string name="f_u_15_05">taobao.com</string>
<string name="f_u_15_06">mercadolivre.com.br</string>
<string name="f_u_15_07">walmart.com</string>
<string name="f_u_15_08">allegro.pl </string>
<string name="f_u_15_09">tmall.com</string>
<string name="f_u_15_10">avito.ru</string>
<string name="f_u_16">Sports</string>
<string name="f_u_16_01">sport.mail.ru</string>
<string name="f_u_16_02">uefa.com</string>
<string name="f_u_16_03">mlb.com</string>
<string name="f_u_16_04">nba.com</string>
<string name="f_u_16_05">goal.com</string>
<string name="f_u_16_06">livedoor.biz</string>
<string name="f_u_16_07">livescore.com</string>
<string name="f_u_16_08">kooora.com</string>
<string name="f_u_16_09">sportbox.ru</string>
<string name="f_u_16_10">esporte.uol.com.br</string>
<string name="f_u_17"> Hotel</string>
<string name="f_u_17_01">booking.com</string>
<string name="f_u_17_02">airbnb.com</string>
<string name="f_u_17_03">hotels.com</string>
<string name="f_u_17_04">agoda.com</string>
<string name="f_u_17_05">marriott.com</string>
<string name="f_u_17_06">hilton.com</string>
<string name="f_u_17_07">vrbo.com</string>
<string name="f_u_17_08">ihg.com</string>
<string name="f_u_17_09">airbnb.fr</string>
<string name="f_u_17_10">homeaway.com</string>
<string name="f_u_18">Airplane</string>
<string name="f_u_18_01">ryanair.com</string>
<string name="f_u_18_02">southwest.com</string>
<string name="f_u_18_03">aa.com</string>
<string name="f_u_18_04">delta.com</string>
<string name="f_u_18_05">united.com</string>
<string name="f_u_18_06">easyjet.com</string>
    <string name="btn_search">Search</string>
    <string name="search_content">search content</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="refresh">refresh</string>
    <string name="home">home</string>
    <string name="btn_display_news">news</string>
    <string name="btn_display_video">video</string>
    <string name="btn_display_url">url</string>
    <string name="btn_display_image">image</string>
</resources>