<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent" >  
  
    <AutoCompleteTextView  
        android:id="@+id/url"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:hint="@string/url"  
        android:inputType="textUri"   
        android:completionHint="@string/url"  
        android:completionThreshold="1" />  
  
    <WebView  
        android:id="@+id/show"  
        android:layout_width="match_parent"  
        android:layout_height="match_parent"  
        android:layout_above="@+id/btnLayout"  
        android:layout_below="@+id/url" />  
  
    <LinearLayout  
        android:id="@+id/btnLayout"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:layout_alignParentBottom="true"  
        android:layout_alignParentLeft="true"  
        android:layout_alignParentRight="true"  
        android:orientation="horizontal" >  
  
        <Button  
            android:id="@+id/back"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_weight="1.0"  
            android:text="@string/back" />  
  
        <Button  
            android:id="@+id/forward"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_weight="1.0"  
            android:text="@string/forward" />  
  
        <Button  
            android:id="@+id/refresh"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_weight="1.0"  
            android:text="@string/refresh" />  
  
        <Button  
            android:id="@+id/home"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_weight="1.0"  
            android:text="@string/home" />  
    </LinearLayout>  
  
</RelativeLayout>